--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-eventbrite-popup-checkout",
-  "version": "1.0.5",
-  "description": "A React component for the Eventbrite checkout widget",
+  "version": "2.0.0",
+  "description": "A React component for the Eventbrite checkout widgets",
   "main": "dist/main.js",
   "repository": {
     "type": "git",
@@ -22,20 +22,21 @@
     "prepublish": "npx webpack --config webpack.config.js"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "react": "^16.8.6",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4"
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
-    "uuid": "^3.4.0"
+    "prop-types": "^15.8.1",
+    "uuid": "^9.0.0"
   }
 }
