--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-eventbrite-popup-checkout",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A React component for the Eventbrite checkout widgets",
   "main": "dist/main.js",
+  "types": "types.d.ts",
   "repository": {
     "type": "git",
     "url": "git://github.com/wizardrylabs/react-eventbrite-popup-checkout.git"
