--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A React component for the Eventbrite checkout widgets",
   "main": "dist/main.js",
   "types": "types.d.ts",
-  "keywords": ["eventbrite", "react"],
+  "keywords": [
+    "eventbrite",
+    "react"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/wizardrylabs/react-eventbrite-popup-checkout.git"
@@ -37,7 +40,5 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "dependencies": {
-    "uuid": "^9.0.0"
-  }
+  "dependencies": {}
 }
