--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A React component for the Eventbrite checkout widgets",
   "main": "dist/main.js",
   "types": "types.d.ts",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "keywords": [
     "eventbrite",
     "react"
