--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "react-eventbrite-popup-checkout",
   "version": "2.0.14",
   "description": "A React component for the Eventbrite checkout widgets",
-  "main": "dist/main.js",
+  "main": "src/useEventbrite.js",
   "types": "types.d.ts",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 6.10.0"
   },
   "keywords": [
     "eventbrite",
