--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "react-dom": "^18.2.0"
   },
   "dependencies": {}
 }
