--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-eventbrite-popup-checkout",
   "version": "2.0.14",
   "description": "A React component for the Eventbrite checkout widgets",
-  "main": "dist/main.js",
+  "main": "src/useEventbrite.js",
   "types": "types.d.ts",
   "engines": {
     "node": ">= 18"
