--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "react-eventbrite-popup-checkout",
   "version": "2.0.14",
   "description": "A React component for the Eventbrite checkout widgets",
-  "main": "dist/main.js",
+  "main": "src/useEventbrite.js",
   "types": "types.d.ts",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 18"
   },
   "keywords": [
     "eventbrite",
@@ -26,22 +26,13 @@
   ],
   "license": "MIT",
   "private": false,
-  "scripts": {
-    "prepublishOnly": "npx webpack --config webpack.config.js"
-  },
   "peerDependencies": {
     "react": ">= 16.8.0",
     "react-dom": ">= 16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^8.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "react-dom": "^18.2.0"
   },
   "dependencies": {}
 }
